versioned_docs/version-2.5.0/compatibility/mcu_demoboard.mdx
---
hide_title: true
hide_table_of_contents: true
custom_edit_url: null
title: 'MCUs and demo boards compatibility'
description: Luos engine uses the resources of the MCU to create a network. Discover a list of MCUs directly compatible with the Luos engine.
---

import Image from '/src/components/Images.js';

# MCUs and demo boards compatibility

Luos engine uses MCU's resources to create a network. This is already configured in the LuosHAL file for many MCUs, so that they are plug-and-play.
Below is the list of the MCUs directly compatible with Luos engine:

### ST

|      Family      |                MCU                  |                       Description                       |
| :--------------: | :---------------------------------: |-------------------------------------------------------: |
|     STM32F0      |             STM32F0X0               |                                                         |
|                  |             STM32F0X1               |                                                         |
|                  |             STM32F0X2               |     HAL default configuration on NUCLEO-F072RB          |
|                  |             STM32F0X8               |                                                         |
|     STM32F4      |             STM32F401               |                 Example on NUCLEO-F401RE                |
|                  |           STM32F405/415             |                                                         |
|                  |           STM32F407/417             |                                                         |
|                  |             STM32F410               |     HAL default configuration on NUCLEO-F410RB          |
|                  |             STM32F411               |                                                         |
|                  |             STM32F412               |                                                         |
|                  |           STM32F413/423             |                                                         |
|                  |           STM32F427/437             |                                                         |
|                  |           STM32F429/439             |                                                         |
|                  |             STM32F446               |                                                         |
|                  |           STM32F469/479             |                                                         |
|     STM32G4      |             STM32G4X1               |     HAL default configuration on NUCLEO-G431KB          |
|                  |             STM32G4X3               |                                                         |
|                  |             STM32G4X4               |                Example on NUCLEO-G474KE                 |
|     STM32L4      |             STM32L4x1               |                                                         |
|                  |             STM32L4x2               |     HAL default configuration on NUCLEO-L432KC          |
|                  |             STM32L4x3               |                                                         |
|                  |             STM32L4x5               |                                                         |
|                  |             STM32L4x6               |                                                         |

### Atmel/Microchip

|      Family      |                MCU                  |                       Description                       |
| :--------------: | :---------------------------------: |-------------------------------------------------------: |
|      ATSAMD      |             ATSAMD21Exx             |                                                         |
|                  |             ATSAMD21Gxx             |                                                         |
|                  |             ATSAMD21Jxx             |      HAL default configuration on SAMDJ18A              |

### ESP32

|      Family      |                MCU                  |                       Description                       |
| :--------------: | :---------------------------------: |-------------------------------------------------------: |
|       ESP32      |                ESP32                |         HAL default configuration on ESP32              |
|                  |               ESP32-C3              |                                                         |
|                  |               ESP32-S2              |                                                         |
|                  |               ESP32-S3              |                                                         |

### Demo boards

|                Board                 |                                 Description                               |
| :----------------------------------: |-------------------------------------------------------------------------: |
|             NUCLEO-F030R8            |                                                                           |
|             NUCLEO-F031K6            |                                                                           |
|             NUCLEO-F042K6            |                                                                           |
|             NUCLEO-F070RB            |                                                                           |
|             NUCLEO-F072RB            |                             Example with Luos engine                      |
|             NUCLEO-F401RE            |                             Example with Luos engine                      |
|             NUCLEO-F410RB            |                             Example with Luos engine                      |
|             NUCLEO-F411RE            |                                                                           |
|             NUCLEO-G431KB            |                             Example with Luos engine                      |
|             NUCLEO-G474KE            |                             Example with Luos engine                      |
|             NUCLEO-L412KB            |                                                                           |
|             NUCLEO-L432KC            |                             Example with Luos engine                      |
|             NUCLEO-L433RC            |                                                                           |
|             NUCLEO-L452RE            |                                                                           |
|          ARDUINO_SAMD_ZERO           |                 HAL default configuration on ARDUINO                      |
|       ARDUINO_SAMD_MKRZERO           |                                                                           |
|       ARDUINO_SAMD_MKR1000           |                                                                           |
|     ARDUINO_SAMD_MKRWIFI1010         |                                                                           |
|     ARDUINO_SAMD_MKRFox1200          |                                                                           |
|     ARDUINO_SAMD_MKRWAN1300          |                                                                           |
|     ARDUINO_SAMD_MKRWAN1310          |                                                                           |
|     ARDUINO_SAMD_MKRGSM1400          |                                                                           |
|      ARDUINO_SAMD_MKRNB1500          |                                                                           |
|     ARDUINO_SAMD_NANO_33_IOT         |                                                                           |
|     ARDUINO_SAMD_MKRVIDOR4000        |                                                                           |
|          ESP32-S2-DEVKITM-1          |                                                                           |
|          ESP32-S2-DEVKITC-1          |                  HAL default configuration on ESP32-S2/S3                 |
|          ESP32-S2-KALUGA-1           |                                                                           |
|          ESP32-S2-SAOLA-1            |                                                                           |
|          ESP32-S3-DEVKITC-1          |                                                                           |
|          ESP32-S3-DEVKITM-1          |                                                                           |
|          ESP32-S3-EYE                |                                                                           |
|          ESP32-C3-DEVKITM-1          |                  HAL default configuration on ESP32-C3                    |
|          ESP32-C3-DEVKITC-02         |                                                                           |
|          ESP32-DEVKITC-1             |                    HAL default configuration on ESP32                     |
|          ESP32-DEVKITM-1             |                                                                           |
|          ESP-WROVER-KIT              |                                                                           |
|          ESP-EYE                     |                                                                           |
|           SEEEDUINO_XIAO             |                                                                           |
